# php-basic-code

./: README.md
PSR example/: code_standard.php
Web design mode/Behavior-based Mode/: read.md
Web design mode/Behavior-based Mode/Command Mode/: test.php
Web design mode/Behavior-based Mode/Mediator Mode/: test.php
Web design mode/Behavior-based Mode/Observer Mode/: test.php
Web design mode/Behavior-based Mode/State Mode/: test.php
Web design mode/Behavior-based Mode/Strategy Pattern/: test.php
Web design mode/Creational Mode/: read.md
Web design mode/Creational Mode/Builder mode/: test.php
Web design mode/Creational Mode/Singleton mode/: CarSingleton.class.php  Customer.class.php
Web design mode/Creational Mode/abstract factory mode/: test.php
Web design mode/Creational Mode/factory method mode/: test.php
Web design mode/Creational Mode/static factory method/: factory.php
Web design mode/Prototype mode/: CarPrototype.class.php  Test.php
Web design mode/Singleton mode/: CarSingleton.class.php  Test.php
Web design mode/Structual Mode/: read.md
php-hashtable/: Makefile  Makefile.am  Makefile.in  arr  config.status  configure  configure.in  hash.c  hash.h  main.c  readme.md
php-hashtable/.deps/: hash.Po  main.Po
php-hashtable/autom4te.cache/: output.1  requests  traces.0  traces.1
php-socket/SmtpMail/: SmtpMail.php  test.php
php-socket/socket/: client.php  server.php
symfonyTest/: Readme.md  composer.json  controllers.php  index.php  model.php
symfonyTest/template/: layout.php  list.php  show.php
(+6 files in other folders)
