#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(main.c)
AM_INIT_AUTOMAKE(arr,1.0)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_MALLOC

AC_OUTPUT(Makefile)
